# lean-python-bindings

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sh.ex  requirements.txt  setup.py
cmake/: FindPythonLibsNew.cmake
lean/: __init__.py  lean.cpp  test_env.py
src/: Makefile.ex  lean.cpp  test_env.py  test_expr.py  test_level.py  test_name.py  test_run_tactic.py  test_td_embed.py
src/lang/: env.py  expr.py  level.py
src/lean/: Makefile.ex  expr.cpp  test.py
src/pybind11/: lean.cpp  test_name.py
test/: test_env.py  test_expr.py  test_level.py  test_name.py  test_reader.py  test_run_tactic.py  test_td_embed.py
test/lang/: env.py  expr.py  name.py
